package org.example.SistemaDePago;

public abstract class MetodoDePago {

    public abstract void procesarPago(double importe);
}
